package abstractFactory.abstractWeapon;

public abstract class MainWeapon {
    public abstract void useMain();

}
