package abstractFactory.abstractWeapon;

public abstract class SpecialWeapon {
    public abstract void useSpecial();
}
