package abstractFactory.abstractWeapon;

public abstract class SubWeapon {
    public abstract void useSub();
}
