package strategy.mainWeapons;

public class Wakaba implements MainWeapon {

    @Override
    public void useMain() {
        System.out.println("とぱぱぱぱ");
    }

}
